--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
+/* Global Styles */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-/* You can add global styles to this file, and also import other style files */
+ 
+/* Add any additional global styles below */
